# pyMagCalc

./: -neutron.gitignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  CVO_alpha_disp_data.npz  GAP_STATUS.md  KFe3J_disp_data.npz  LICENSE  README.md  README.rst  SUN_PLAN.md  TUTORIAL.md  config_designer.yaml  config_gui_run.yaml  config_loader.py  debug_cvo_gs_draft.py  debug_symbolic_hamiltonian.py  generic_model.py  generic_spin_model.py  inspect_hm.py  kfe3j_example_results_sqw_updated.npz  magcalc.py  pyproject.toml  pytest.ini  requirements.txt  run_magcalc.py  run_native.sh  spin_model.py  spin_model_fm.py  start_magcalc.sh  test_kfe3j_config.py  test_magcalc.py  test_spin_model_match.py  verify_model_match.py
KFe3J/: EQmap_KFe3J.py  HKmap_KFe3J.py  KFe3J_cif_disp_data.npz  KFe3J_decl_dm_sqw_data.npz  KFe3J_decl_prim_disp_data.npz  KFe3J_decl_prim_sqw_data.npz  KFe3J_declarative.yaml  KFe3J_disp_data.npz  KFe3J_sqw_data.npz  config.yaml  disp_KFe3J.py  lmfit_KFe3J.py  lmfit_KFe3J_new.py  sw_KFe3J.py  sw_KFe3J.txt  test_magcalc.py
ZnCVO/: EKmap_ZnCVO.py
aCVO/: CVO_disp_data.npz  CVO_min_energy_canting_vs_H_data.npz  CVO_sqw_data.npz  EQmap_CVO.py  classical_minimizer_cvo.py  config.yaml  disp_CVO.py  find_min_disp_vs_H_cvo.py  plot_min_energy_vs_H_cvo.py  spin_model.py  spin_model_cvo_Hc.py  spin_model_hc.py  sw_CVO.py
archive/: coding_plan_1_spin_model.rtf  magcalc_origin.py
examples/: CVO_disp_data.npz  kfe3j_example_results_disp_updated.npz
gui/: README.md  config_pure.yaml  index.html  native_app.py  package-lock.json  package.json  server.py  vite.config.js
magcalc/: __init__.py  __main__.py  annealing.py  atom_pos.py  cif_utils.py  classical_dynamics.py  cli.py  config_builder.py  config_loader.py  core.py  corrections.py  ewald.py  fitting.py  form_factors.py  generic_model.py  generic_spin_model.py  linalg.py  material_config_schema.yaml  mcif.py  (+11 more)
magcalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+338 files in other folders)
